Added: Add screen, Edit screen and Delete screen in Theatre panel screens
Added: Add movies, Edit movies and Delete movies in Theatre panel Movie Management

Added: View schedule, Add schedule, Edit schedule and Delete schedule in Theatre panel Screens

--- a/public/assets/css/style-theatre.css
+++ b/public/assets/css/style-theatre.css
@@ -10157,7 +10157,7 @@ a.card__title:hover {
   font-size: 22px;
   line-height: 27px;
   font-weight: 600;
-  color: var(--primary);
+  color: var(--success);
   margin: 0; }
 
 .align-self {
