--- a/views/theatre/screens.hbs
+++ b/views/theatre/screens.hbs
@@ -8,8 +8,8 @@
             <!-- breadcrumbs -->
             <nav aria-label="breadcrumb" class="mb-4">
                 <ol class="breadcrumb my-breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Theatre Management</li>
+                    <li class="breadcrumb-item"><a href="/theatre">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Screens</li>
                 </ol>
             </nav>
             <!-- //breadcrumbs -->
@@ -18,33 +18,33 @@
                 <div class="card card_border mb-5">
                     <div class="cards__heading">
                         <div class="row mx-1">
-                            <h3>Theatre Owners</h3>
-                            <a href="/admin/add-owners" class="btn btn-primary rounded-pill px-5 ml-auto">Add Owners</a>
+                            <h3>Screens</h3>
+                            <a href="/theatre/add-screens" class="btn btn-success rounded-pill px-5 ml-auto">Add Screens</a>
                         </div>
                     </div>
                     <div class="card-body">
                         <table class="table border table-responsive-sm" id="data-table">
-                            <thead class="bg-primary text-white">
+                            <thead class="bg-success text-white">
                                 <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Owner Name</th>
-                                    <th scope="col">Theatre Name</th>
-                                    <th scope="col">Theatres</th>
+                                    <th scope="col">Sr.No</th>
+                                    <th scope="col">Screen Name</th>
+                                    <th scope="col">Total Seats</th>
+                                    <th scope="col">Shedule</th>
                                     <th scope="col">Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {{#each owners}}
+                                {{#each screens}}
                                 <tr id="{{this._id}}">
                                     <th scope="row" class="serialNumber"></th>
-                                    <td>{{this.ownerName}}</td>
-                                    <td>{{this.theatreName}}</td>
+                                    <td>{{this.screenName}}</td>
+                                    <td>{{this.seats}}</td>
                                     <td>
-                                        <a href="/admin/owner-details/{{this._id}}"
-                                            class="btn btn-danger btn-sm rounded-pill text-uppercase px-3">View</a>
+                                        <a href="/theatre/view-schedule/{{this._id}}"
+                                            class="btn btn-danger btn-sm rounded-pill text-uppercase px-3"> View Schedule</a>
                                     </td>
                                     <td>
-                                        <a href="/admin/edit-owner/{{this._id}}"
+                                        <a href="/theatre/edit-screen/{{this._id}}"
                                             class="btn btn-primary btn-sm rounded-pill text-uppercase px-3">Edit</a>
                                         <button class="btn btn-danger btn-sm rounded-pill text-uppercase px-3"
                                             data-toggle="modal" data-target="#deleteModal{{this._id}}">Delete</button>
@@ -58,14 +58,14 @@
                                         <div class="modal-content">
                                             <div class="modal-body text-center text-uppercase p-5">
                                                 <h6 class="font-weight-bold">Are you sure you want to delete
-                                                    {{this.ownerName}} ?</h6>
+                                                    {{this.screenName}} ?</h6>
                                                 <div class="row mt-5">
                                                     <button type="button"
                                                         class="btn btn-success btn-sm rounded-pill px-5"
                                                         data-dismiss="modal">CANCEL</button>
                                                     <button type="button"
                                                         class="btn btn-danger btn-sm rounded-pill px-5 ml-auto"
-                                                        onclick="deleteItem(event, '{{this._id}}', '/admin/delete-owner')">DELETE</button>
+                                                        onclick="deleteItem(event, '{{this._id}}', '/theatre/delete-screen')">DELETE</button>
                                                 </div>
                                             </div>
                                         </div>
