--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,10 @@ input {
   box-shadow: none !important;
 }
 
+select {
+  box-shadow: none !important;
+}
+
 .serialNumber::before {
   counter-increment: Serial !important;
   content: counter(Serial) !important;
