--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -49,7 +49,7 @@
   {{>success-alert}}
   {{/if}}
   <div class="row justify-content-center m-0">
-    <div class="col-md-4 m-0">
+    <div class="col-md-4 m-0" id="alertBox">
       <div class="alert alert-success alert-dismissible fade show m-0 mt-5" id="successAlert" role="alert" hidden>
         <div id="successAlertBody"></div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -59,7 +59,7 @@
     </div>
   </div>
   <div class="row justify-content-center m-0">
-    <div class="col-md-4 m-0">
+    <div class="col-md-4 m-0" id="alertBox">
       <div class="alert alert-danger alert-dismissible fade show m-0 mt-5" id="errorAlert" role="alert" hidden>
         <div id="errorAlertBody"></div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -73,28 +73,6 @@
   <!-- Sweet Alert -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <!-- /Sweet Alert -->
-  <script>
-    // When the user scrolls down 20px from the top of the document, show the button
-    window.onscroll = function () {
-      scrollFunction()
-    };
-
-    function scrollFunction() {
-      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        document.getElementById("movetop").style.display = "block";
-      } else {
-        document.getElementById("movetop").style.display = "none";
-      }
-    }
-
-    // When the user clicks on the button, scroll to the top of the document
-    function topFunction() {
-      document.body.scrollTop = 0;
-      document.documentElement.scrollTop = 0;
-    }
-  </script>
-  <!-- /move top -->
-
 
   <script src="/assets/js/jquery-3.3.1.min.js"></script>
   <script src="/assets/js/jquery-1.10.2.min.js"></script>
