--- a/views/theatre/view-schedule.hbs
+++ b/views/theatre/view-schedule.hbs
@@ -8,8 +8,8 @@
             <!-- breadcrumbs -->
             <nav aria-label="breadcrumb" class="mb-4">
                 <ol class="breadcrumb my-breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Theatre Management</li>
+                    <li class="breadcrumb-item"><a href="/theatre">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">View Schedule</li>
                 </ol>
             </nav>
             <!-- //breadcrumbs -->
@@ -18,33 +18,30 @@
                 <div class="card card_border mb-5">
                     <div class="cards__heading">
                         <div class="row mx-1">
-                            <h3>Theatre Owners</h3>
-                            <a href="/admin/add-owners" class="btn btn-primary rounded-pill px-5 ml-auto">Add Owners</a>
+                            <h3>{{screen.screenName}} Shows</h3>
+                            <a href="/theatre/add-shows/{{screen._id}}" class="btn btn-success rounded-pill px-5 ml-auto">Add Shows</a>
                         </div>
                     </div>
                     <div class="card-body">
                         <table class="table border table-responsive-sm" id="data-table">
-                            <thead class="bg-primary text-white">
+                            <thead class="bg-success text-white">
                                 <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Owner Name</th>
-                                    <th scope="col">Theatre Name</th>
-                                    <th scope="col">Theatres</th>
+                                    <th scope="col">Sr.No</th>
+                                    <th scope="col">Movie Name</th>
+                                    <th scope="col">Date</th>
+                                    <th scope="col">Time</th>
                                     <th scope="col">Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {{#each owners}}
+                                {{#each shows}}
                                 <tr id="{{this._id}}">
                                     <th scope="row" class="serialNumber"></th>
-                                    <td>{{this.ownerName}}</td>
-                                    <td>{{this.theatreName}}</td>
+                                    <td>{{this.movieDetails.0.movieTitle}}</td>
+                                    <td>{{this.date}}</td>
+                                    <td>{{this.showTime}}</td>
                                     <td>
-                                        <a href="/admin/owner-details/{{this._id}}"
-                                            class="btn btn-danger btn-sm rounded-pill text-uppercase px-3">View</a>
-                                    </td>
-                                    <td>
-                                        <a href="/admin/edit-owner/{{this._id}}"
+                                        <a href="/theatre/edit-show?showId={{this._id}}&screenId={{../screen._id}}"
                                             class="btn btn-primary btn-sm rounded-pill text-uppercase px-3">Edit</a>
                                         <button class="btn btn-danger btn-sm rounded-pill text-uppercase px-3"
                                             data-toggle="modal" data-target="#deleteModal{{this._id}}">Delete</button>
@@ -52,20 +49,19 @@
                                 </tr>
                                 <!-- Modal -->
                                 <div class="modal fade" id="deleteModal{{this._id}}" tabindex="-1" role="dialog"
-                                    data-backdrop="static" aria-labelledby="deleteModal{{this._id}}Title"
-                                    aria-hidden="true">
+                                    data-backdrop="static" aria-labelledby="deleteModal{{this._id}}Title" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered" role="document">
                                         <div class="modal-content">
                                             <div class="modal-body text-center text-uppercase p-5">
                                                 <h6 class="font-weight-bold">Are you sure you want to delete
-                                                    {{this.ownerName}} ?</h6>
+                                                    {{this.movieDetails.0.movieTitle}} ?</h6>
                                                 <div class="row mt-5">
                                                     <button type="button"
                                                         class="btn btn-success btn-sm rounded-pill px-5"
                                                         data-dismiss="modal">CANCEL</button>
                                                     <button type="button"
                                                         class="btn btn-danger btn-sm rounded-pill px-5 ml-auto"
-                                                        onclick="deleteItem(event, '{{this._id}}', '/admin/delete-owner')">DELETE</button>
+                                                        onclick="deleteShow(event, '{{../screen._id}}', '{{this._id}}')">DELETE</button>
                                                 </div>
                                             </div>
                                         </div>
