--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -20,6 +20,9 @@
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary rounded-pill px-5">Submit</button>
                     </div>
+                    <div class="text-center pt-3">
+                        <a class="btn btn-danger rounded-circle" title="Sign in with google" href="/admin/auth/google"><i class="fa fa-google"></i></a>
+                    </div>
                 </form>
             </div>
         </div>
