Modified google Authentication for Admin now when clicking on google signin button a popup will open and after authentication popup will automatically close
Fixed issue google authentication error flash dont showing issue in theatre login

--- a/views/theatre/login.hbs
+++ b/views/theatre/login.hbs
@@ -23,7 +23,7 @@
                         <button type="submit" class="btn btn-success rounded-pill px-5">Submit</button>
                     </div>
                     <div class="text-center pt-3">
-                        <a class="btn btn-danger rounded-circle" title="Sign in with google" onClick="authPopup(event, '/theatre/auth/google')"><i class="fa fa-google"></i></a>
+                        <a class="btn btn-danger text-white rounded-circle" title="Sign in with google" onClick="authPopup(event, '/theatre/auth/google')"><i class="fa fa-google"></i></a>
                     </div>
                 </form>
             </div>
