--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,3 +73,17 @@ select {
   font-size: 12px;
   color: var(--primary);
 }
+
+.img-btn {
+  width: 1.2rem;
+  height: 1.2rem;
+  margin: 0 0.5rem
+}
+
+.btn-shadow {
+  box-shadow: 1px 1px 1px #888888 inset !important;
+}
+
+.btn-shadow:hover {
+  box-shadow: 1px 1px 4px 2px #888888 !important;
+}
