Added google authentication, users can now signin using gmail

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -28,7 +28,7 @@
                     </div>
                 </form>
                 <div class="text-center mt-5 mb-3">
-                    <a href="" class="btn btn-white btn-shadow px-4"><img src="/assets/images/Google_Icon.png" alt="" class="img-btn"></a>
+                    <a class="btn btn-white btn-shadow px-4" onClick="authPopup(event, '/auth/google')"><img src="/assets/images/Google_Icon.png" alt="" class="img-btn"></a>
                     <a class="btn btn-white btn-shadow px-4" onClick="authPopup(event, '/auth/facebook')"><img src="/assets/images/Facebook_Icon.png" alt="" class="img-btn"></a>
                 </div>
                 <div class="mt-4 text-center">
