Added Show all movies and show all upcoming movies views

--- a/views/user/homepage.hbs
+++ b/views/user/homepage.hbs
@@ -57,7 +57,7 @@
                         <h3 class="hny-title">Now Showing Movies</h3>
                     </div>
                     <div class="headerhny-right text-lg-right">
-                        <h4><a class="show-title" href="/">Show all</a></h4>
+                        <h4><a class="show-title" href="/now-showing-movies">Show all</a></h4>
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                         <h3 class="hny-title">Upcoming Movies</h3>
                     </div>
                     <div class="headerhny-right text-lg-right">
-                        <h4><a class="show-title" href="">Show all</a></h4>
+                        <h4><a class="show-title" href="/upcoming-movies">Show all</a></h4>
                     </div>
                 </div>
             </div>
