--- a/views/user/now-showing-movies.hbs
+++ b/views/user/now-showing-movies.hbs
@@ -28,7 +28,7 @@
                             </h4>
                             <div class="row mt-5">
                                 <div class="col text-center">
-                                    <a href=""
+                                    <a href="/view-movie?movieId={{this._id}}"
                                         class="btn btn-info text-uppercase font-weight-bold btn-sm rounded-pill px-5">View</a>
                                 </div>
                             </div>
