--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -32,6 +32,9 @@
     href="https://cdn.datatables.net/v/bs4/dt-1.10.22/b-1.6.5/kt-2.5.3/r-2.2.6/datatables.min.css" />
 
   <link rel="stylesheet" href="/stylesheets/style.css">
+
+  <script src="/assets/js/jquery-3.3.1.min.js"></script>
+  <script src="/assets/js/jquery-1.10.2.min.js"></script>
 </head>
 
 <title>{{title}}</title>
@@ -111,9 +114,6 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <!-- /Sweet Alert -->
 
-  <script src="/assets/js/jquery-3.3.1.min.js"></script>
-  <script src="/assets/js/jquery-1.10.2.min.js"></script>
-
   <script src="/assets/js/jquery.nicescroll.js"></script>
   <script src="/assets/js/scripts.js"></script>
 
@@ -149,7 +149,8 @@
   <!-- Bootstrap Core JavaScript -->
   <script src="/assets/js/bootstrap.min.js"></script>
 
-  <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.22/b-1.6.5/kt-2.5.3/r-2.2.6/datatables.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdn.datatables.net/v/bs4/dt-1.10.22/b-1.6.5/kt-2.5.3/r-2.2.6/datatables.min.js"></script>
   <script>
     $(document).ready(function () {
       $('#data-table').DataTable();
