--- a/views/user/view-movie.hbs
+++ b/views/user/view-movie.hbs
@@ -73,7 +73,7 @@
                         <h6 class="text-info">{{this.showTime}}</h6>
                     </div>
                     <div class="col-md-3 text-right">
-                        <a href=""
+                        <a href="/book-seat?showId={{this.show}}&screenId={{this.screen}}"
                             class="btn btn-outline-primary text-uppercase font-weight-bold btn-sm px-5 rounded-pill">Book
                             Seat</a>
                     </div>
@@ -98,7 +98,7 @@
                         <h6 class="text-info">{{this.showTime}}</h6>
                     </div>
                     <div class="col-md-3 text-right">
-                        <a href=""
+                        <a href="/book-seat?showId={{this.show}}&screenId={{this.screen}}"
                             class="btn btn-outline-primary text-uppercase font-weight-bold btn-sm px-5 rounded-pill">Book
                             Seat</a>
                     </div>
@@ -123,7 +123,7 @@
                         <h6 class="text-info">{{this.showTime}}</h6>
                     </div>
                     <div class="col-md-3 text-right">
-                        <a href=""
+                        <a href="/book-seat?showId={{this.show}}&screenId={{this.screen}}"
                             class="btn btn-outline-primary text-uppercase font-weight-bold btn-sm px-5 rounded-pill">Book
                             Seat</a>
                     </div>
