--- a/views/theatre/add-screens.hbs
+++ b/views/theatre/add-screens.hbs
@@ -42,9 +42,55 @@
                                                     id="seats">
                                             </div>
                                         </div>
+                                        <div class="form-group row">
+                                            <div class="col-md-3 text-md-right">
+                                                <label for="seatColumn">Number of seats in a row</label>
+                                            </div>
+                                            <div class="col-md-9">
+                                                <input type="number" name="seatColumn" class="form-control" required
+                                                    id="seatColumn">
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-3"></div>
+                                            <div class="col-md-9 my-4 text-center">
+                                                <h5 class="text-secondary text-uppercase font-weight-bold">Number of
+                                                    rows for each section
+                                                </h5>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-md-3 text-md-right">
+                                            </div>
+                                            <div class="col-md-9">
+                                                <div class="row">
+                                                    <div class="col-md-3">
+                                                        <label for="vipRows">VIP</label>
+                                                        <input type="number" name="vipRows" class="form-control"
+                                                            required id="vipRows">
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        <label for="premiumRows">PREMIUM</label>
+                                                        <input type="number" name="premiumRows" class="form-control"
+                                                            required id="premiumRows">
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        <label for="exicutiveRows">EXECUTIVE</label>
+                                                        <input type="number" name="exicutiveRows" class="form-control"
+                                                            required id="exicutiveRows">
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        <label for="normalRows">NORMAL</label>
+                                                        <input type="number" name="normalRows" class="form-control"
+                                                            required id="normalRows">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <button type="submit"
                                             class="btn btn-success float-right rounded-pill px-5">Submit</button>
-                                        <a href="/theatre/screens" class="btn btn-danger float-right rounded-pill px-5 mr-3">Cancel</a>
+                                        <a href="/theatre/screens"
+                                            class="btn btn-danger float-right rounded-pill px-5 mr-3">Cancel</a>
                                     </form>
                                 </div>
                             </div>
